    - Added rhodium and its alloys
  Changes:
    - Changes in space science branch of tech tree
    - Landed cargo pods are recovered when picking them up
    - Changed location of high purity silicon in tech tree
    - Removed ferrite with copper, zinc and nickel recipes
    - Changed bleach recipe
    - Some icon changes
    - Biological science pack 2 is now made in greenhouse
  Balancing:
    - Increased power consumption and speed of big crusher and educed module slots from 4 to 3
  Bugfixes:
    - Fixed crystallizer animation speed
    - Fixed recipe subgroup of biological science pack 2
    - Fixed that shotgun and shutgun ammo was unlocked twice in tech tree
---------------------------------------------------------------------------------------------------
Version: 0.3.17
Date: 2025-05-30
  Features:
    - Added potassium casting
    - Added crushed and enriched stibnite
    - Added crushed and enriched holmium
  Changes:
    - Changed holmium processing recipes
    - Smelting many metals is now not possible any more in crystallizer
    - Changed order of some icons
    - Some changes in tech tree
    - Some recipes when enriching from crushed recoures yielded a small amount of an other ore. Now that ore is always in its crushed form.
    - Renamed mineral water pumpjack prototype (All of your mineral pumpjacks will be deleted when updating)
    - Hafnium and Rhenium alloys are processed in arcfurnace
  Balancing:
    - Belt immunity equipment is now unlocked earlier
    - Rebalanced crystallizer
  Bugfixes:
    - Fixed some technology requirements for AAI Containers
    - Fixed some technology icons
    - Fixed tungsten plate and tungsten steel smelting recipe chains
    - Fixed recipe casting stainless steel gear wheel
    - Fixed requirement of light emitting diode for tier 2 modules
    - Fixed assembling machines required for crafting tier 2 and tier 3 modules