@@ -2399,6 +2399,29 @@ data.raw.technology["utility-science-pack"].unit.ingredients = {
 }
 
 data.raw.technology["space-science-pack"].icon = "__Spaghetorio__/graphics/krastorio/technologies/matter-tech-card.png"
+data.raw.technology["space-science-pack"].prerequisites = {
+  "space-platform-thruster"
+}
+data.raw.technology["space-science-pack"].research_trigger = nil
+data.raw.technology["space-science-pack"].unit = {
+  count = 750,
+  ingredients = {
+    {"sp-automation-science-pack-2", 1},
+    {"sp-logistic-science-pack-2", 1},
+    {"sp-material-science-pack-2", 1},
+    {"sp-geological-science-pack-2", 1},
+    {"sp-electronic-science-pack-2", 1},
+    {"sp-chemical-science-pack-2", 1},
+    {"sp-metallurgic-science-pack-2", 1},
+    {"sp-electromagnetic-science-pack-2", 1},
+    {"production-science-pack", 1},
+    {"utility-science-pack", 1},
+    {"cryogenic-science-pack", 1},
+    {"agricultural-science-pack", 1},
+    {"sp-computer-science-pack-2", 1}
+  },
+  time = 45
+}
 
 -- table.insert(data.raw.technology["sp-processed-resource-from-acrovoid"].effects, {type = "unlock-recipe", recipe = "sp-coke-from-acrovoid"})
 -- table.insert(data.raw.technology["sp-processed-resource-from-acrovoid"].effects, {type = "unlock-recipe", recipe = "sp-silicon-from-acrovoid"})
