@@ -1729,6 +1729,7 @@ sp-material-science-pack-3=Material science pack 3
 sp-matter-research-data=Matter research data
 sp-matter-science-pack=Matter science pack
 sp-medium-storage-tank=Medium storage tank
+sp-melting-methane-ice=Melting methane ice
 sp-memory-chip=Memory chip
 sp-memory-die=Memory die
 sp-mercury=Mercury
